--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-query": "^3.39.2",
 		"react-scripts": "5.0.1",
+		"react-slideshow-image": "^4.0.4",
 		"sweetalert": "^2.1.2",
 		"web-vitals": "^2.1.4"
 	},
